# ai-study-optimizer

./: Dockerfile  api.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
agent/: agent.py
environment/: study_env.py
graders/: grader.py
server/: app.py
simulation/: simulator.py
tasks/: easy.py  hard.py  medium.py
ui/: app.py
venv_hf/: pyvenv.cfg
venv_hf/Scripts/: activate  activate.bat
